# Patcherex2-Extras

./: LICENSE  README.md
.github/workflows/: decompiler-plugins-pypi.yml
decompiler-plugins/: README.md  pyproject.toml
decompiler-plugins/src/patcherex2/decompiler_plugins/: __init__.py  __main__.py  controller.py  installer.py  patcherex2_plugin.py  ui.py
decompiler-plugins/src/patcherex2/decompiler_plugins/decompiler_specific/: deci_extras.py  libbs_deci_extras.py
decompiler-plugins/src/patcherex2/decompiler_plugins/decompiler_specific/angr/: interface.py  plugin.toml
decompiler-plugins/src/patcherex2/decompiler_plugins/decompiler_specific/ghidra/: interface.py
plugin/patcherex2/: README.md  setup.cfg
plugin/patcherex2/bs_patcherex2/: __init__.py  __main__.py  bs_patcherex2_plugin.py  controller.py  patcherex_ui.py  patcherex_utils.py  plugin.toml
plugin/patcherex2/bs_patcherex2/interface_overrides/: angr.py  ghidra.py
