[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "patcherex2-decompiler-plugins"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "patcherex2",
    "libbs",
]

[project.scripts]
patcherex2-decompiler-plugins = "patcherex2.decompiler_plugins.__main__:main"

[project.urls]
"Homepage" = "https://github.com/purseclab/Patcherex2-Extras"
"Source" = "https://github.com/purseclab/Patcherex2-Extras"
"Tracker" = "https://github.com/purseclab/Patcherex2-Extras/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["patcherex2.decompiler_plugins"]

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B"]

[tool.setuptools_scm]
root = ".."
tag_regex = '^decompiler-plugins/(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'
