[metadata]
name = bs_patcherex2
version = 0.0.0
url = https://github.com/purseclab/Patcherex2/tree/plugin/plugin/patcherex2
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
license = BSD 2 Clause
description = Plugin that allows you to use Patcherex2 in the most common decompilers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
   libbs
   patcherex2

python_requires = >= 3.7
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    bs_patcherex2 = bs_patcherex2.__main__:main
